--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -107,8 +107,15 @@ h4 span {
     opacity: 0.4;
 }
 .lightMode {
-    background-color: white;
-    color: black;
+    --dark-mode-elements: hsl(0, 0%, 100%);
+    --dark-mode-background: hsl(0, 0%, 100%);
+    --dark-mode-text: hsl(200, 10%, 10%);
+    color: black !important;
+  /*  background-color: white;
+    color: black; 
+   --dark-mode-elements: hsl(209, 23%, 22%);
+    --dark-mode-background: hsl(0, 0%, 100%);
+    --dark-mode-text: hsl(209, 23%, 2%); */
 }
 .lightModeShadow {
  box-shadow: -1px 6px 6px 2px hsl(0, 15%, 94%); 
