--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -70,7 +70,8 @@ input[type="search"] {
     margin: 141px 5% 0;
     text-align: center;
     font-size: 12pt;
-    background-color: var(--dark-mode-elements);
+    color: white;
+    background-color: var(--dark-mode-elements) !important;
 }
 
 select.listContinents {
@@ -81,6 +82,7 @@ select.listContinents {
     border-radius: 10px;
     font-size: 12pt;
     padding-left: 10%;
+    color: white;
     background-color: var(--dark-mode-elements);
 }
 
@@ -100,7 +102,8 @@ select.listContinents {
 }
 
 h3, h4, h5, h6 {
-    font-weight: 300;
+    font-weight: 700;
+    color: white;
 }
 h4 span {
     font-weight: 100;    
@@ -113,8 +116,10 @@ h4 span {
   
 }
 .lightModeShadow {
- box-shadow: -1px 6px 6px 2px hsl(0, 15%, 94%); 
+ /*box-shadow: -1px 6px 6px 2px hsl(0, 15%, 94%); */
+ box-shadow: 0px 3px 6px 6px hsl(0, 15%, 94%);
 }
+
 
 @media screen and (min-width: 700px) {
     nav {    
@@ -129,7 +134,8 @@ h4 span {
       /*  margin: 141px auto 0;  */  
     }
     input[type="search"] {
-        width: 30%;        
+        width: 45%;
+        height: 7vh;      
     }
 
     select.listContinents {       
