--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -29,11 +29,8 @@ nav {
 }
 .container {
     display: grid; 
-    grid-template-columns: repeat(auto-fit, minmax(350px , 1fr));
-   
-   /* position: relative;
-    gap: 15px;
-    top: 28vh; */
+    grid-template-columns: repeat(auto-fit, minmax(330px , 1fr));
+    margin: auto 3%;  
     z-index: 1;
 }
 
@@ -74,6 +71,10 @@ input[type="search"] {
     background-color: var(--dark-mode-elements) !important;
 }
 
+input[type="search"] :hover {
+background-color: grey;
+}
+
 select.listContinents {
     display: block;
     margin: 5% 0 5% 8%;
@@ -108,6 +109,20 @@ h3, h4, h5, h6 {
 h4 span {
     font-weight: 100;    
 }
+.searchCountry {
+    width: 100%;
+}
+svg {
+    position: relative;
+    width: 22px;
+    top: -33px;
+    left: 10%;   
+}
+
+svg path {
+    fill: white;
+}
+
 .lightMode {
     --dark-mode-elements: hsl(0, 0%, 100%);
     --dark-mode-background: hsl(0, 0%, 100%);
@@ -118,6 +133,10 @@ h4 span {
 .lightModeShadow {
  /*box-shadow: -1px 6px 6px 2px hsl(0, 15%, 94%); */
  box-shadow: 0px 3px 6px 6px hsl(0, 15%, 94%);
+}
+
+.lightModeSvg {
+    fill: black !important;
 }
 
 
@@ -134,7 +153,7 @@ h4 span {
       /*  margin: 141px auto 0;  */  
     }
     input[type="search"] {
-        width: 45%;
+        width: 100%;
         height: 7vh;      
     }
 
@@ -142,4 +161,21 @@ h4 span {
         margin: 5%;        
         width: 85%;       
     }
+}
+
+@media screen and (min-width: 1220px) {
+    input[type="search"] {
+        width: 50%;
+        height: 7vh;
+    }
+    select.listContinents {
+        margin: 5% 3%;
+        width: 28%;
+    }
+   /* .modeSelector {       
+        margin-right: 5%;        
+        justify-content: flex-end;
+        width: 15%;
+    
+    }*/
 }
