--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,30 +1,40 @@
 <div class="wrapper" [ngClass]="{'lightMode': message}">
-   
+
     <form #form="ngForm">
         <nav>
-            
-            <input type="search" name="searchHere" [(ngModel)]="countryFilter"
-             placeholder="Search for a country..." [ngClass]="{'lightMode': message}">
-            
-            <select class="listContinents" (change)='selectByContinent($event)' [ngClass]="{'lightMode': message}"  name="continents" placeholder="Filter by region">
-               <option value="All" [ngClass]="{'lightMode': message}">Filter by region</option>
+            <div class="searchCountry">
+                <input type="search" name="searchHere" [(ngModel)]="countryFilter" placeholder="Search for a country..."
+                    [ngClass]="{'lightMode': message}">
+
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
+                    class="svg-inline--fa fa-search fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 512 512">
+                    <path fill="currentColor"  [ngClass]="{'lightModeSvg': message}"
+                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+                    </path>
+                </svg>
+
+            </div>
+            <select class="listContinents" (change)='selectByContinent($event)' [ngClass]="{'lightMode': message}"
+                name="continents" placeholder="Filter by region">
+                <option value="All" [ngClass]="{'lightMode': message}">Filter by region</option>
                 <option *ngFor="let continent of continentList" [value]="continent" [ngClass]="{'lightMode': message}"
-                 [selected]='continent.selected == true' >{{continent}}</option>
-            
-            </select>           
+                    [selected]='continent.selected == true'>{{continent}}</option>
+
+            </select>
         </nav>
-        
+
     </form>
-    
+
     <div class="container">
         <div class="main" *ngFor="let country of filteredCountries">
             <img [src]="country.flag" alt="flag of 'country.flag'" [routerLink]="['/countries', country.name]"
-            [ngClass]="{'lightMode': message, 'lightModeShadow': message}" >
+                [ngClass]="{'lightMode': message, 'lightModeShadow': message}">
             <div class="details" [ngClass]="{'lightMode': message, 'lightModeShadow': message}">
                 <h3 [ngClass]="{'lightMode': message}">{{country.name}}</h3>
                 <h4 [ngClass]="{'lightMode': message}">Population:<span> {{country.population | number}}</span></h4>
                 <h4 [ngClass]="{'lightMode': message}">Region: <span>{{country.region}}</span></h4>
-                <h4 [ngClass]="{'lightMode': message}">Capital: <span> {{country.capital}}</span></h4>               
+                <h4 [ngClass]="{'lightMode': message}">Capital: <span> {{country.capital}}</span></h4>
             </div>
         </div>
     </div>
