--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper" [ngClass]="{'lightMode': message}">
 
-    <form #form="ngForm">
+    <form #form="ngForm" aria-label="search area for countries or continents">
         <nav>
             <div class="searchCountry">
-                <input type="search" name="searchHere" [(ngModel)]="countryFilter" placeholder="Search for a country..."
+                <input type="search" name="searchHere" [(ngModel)]="countryFilter" aria-label="search for a country here" placeholder="Search for a country..."
                     [ngClass]="{'lightMode': message}">
 
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="search"
@@ -15,7 +15,7 @@
                 </svg>
 
             </div>
-            <select class="listContinents" (change)='selectByContinent($event)' [ngClass]="{'lightMode': message}"
+            <select class="listContinents" (change)='selectByContinent($event)' aria-label="filter country by continents" [ngClass]="{'lightMode': message}"
                 name="continents" placeholder="Filter by region">
                 <option value="All" [ngClass]="{'lightMode': message}">Filter by region</option>
                 <option *ngFor="let continent of continentList" [value]="continent" [ngClass]="{'lightMode': message}"
