--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -16,7 +16,8 @@ header {
     width: 40%;
     margin-left: auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+    margin-right: 5%;
 }
 h1 {
     font-size: 18px;
